# personal-writer

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements-dpo.txt  requirements.txt
configs/: lora.yaml
data_prep/: README.md  build_generation.py  build_triplets.py  draft_models.json  import_twitter_archive.py  retrain.md  run_draft_generation.py  triplets.md
data_prep/core/: README.md
data_prep/generation-2026-06-29/: README.md
data_prep/generation-2026-06-30/: README.md
data_prep/templates/: instruction.md
prompts/: synth_draft.md  tweet_prompt.md  tweet_prompt_gen1.md  tweet_prompt_gen2.md
scripts/: 00_build_targets.py  01_build_generation_contexts.py  05_build_dataset.py  06_train_lora.sh  07_eval.py  08_infer.py  09_harvest.py  10_train_dpo.py  12_split_generation_chunks.py  13_merge_generation_outputs.py  14_build_triples.py  _common.py  editor.py  gates.py  validate_landing_zone.py
skill/: SKILL.md  install.sh
tests/: test_promote.py  test_run_draft_generation.py
training/: README.md  promote.py
ui/: app.py
use/: README.md
writer_model/: __init__.py  api.py  cli.py  core.py  feedback_log.py  prompts.py  settings.py  studio.py  usage_log.py
