[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "writer-model"
version = "0.1.0"
description = "Local SFT tweet editor model for Xgrowth."
requires-python = ">=3.10"
dependencies = [
  "mlx>=0.18",
  "mlx-lm>=0.18"
]

[project.scripts]
writer-model-edit = "writer_model.cli:main"
writer-model-studio = "writer_model.studio:main"

[tool.setuptools.packages.find]
include = ["writer_model*"]
